--- a/app/src/main/res/layout/programs_item.xml
+++ b/app/src/main/res/layout/programs_item.xml
@@ -2,8 +2,6 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/programImg"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="160dp"
     android:layout_margin="20dp"
-    android:scaleType="fitXY">
-
-</ImageView>
+    android:contentDescription="@string/program_image" />
